client/src/style/ajaxImage.css
/*
 * BeoEarth SPA
 * Copyright(c) 2009-2021, Beowurks
 * Original Author: Eddie Fann
 * License: Eclipse Public License - v 2.0 (https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html)
 *
 */

#ajax-loading
{
  width: 36px;
  height: 36px;
  border-radius: 5px;
  margin: 0 auto;
  background-color: teal;
  position: relative;
}

#ajax-loading img
{
  display: block;
  width: 32px;
  height: auto;
  margin: 2px;
  position: fixed;
}

